Plugin update for Craft 4

--- a/src/templates/_components/fields/ChannelField_input.twig
+++ b/src/templates/_components/fields/ChannelField_input.twig
@@ -16,10 +16,14 @@
 {% import "_includes/forms" as forms %}
 
 {% set options  = [{label: "Select channel"|t('site'), value: null }] %}
-{% for key, section in craft.app.sections.allSections if section.type not in ['single'] and section.handle not in ['landingPages', 'pages'] %}
-    {% for sectionSettings in section.siteSettings if sectionSettings.hasUrls %}
-        {% set options  = options|merge([{label:section.name,value: section.handle}]) %}
-    {% endfor %}
+{% for key, section in craft.app.sections.allSections %}
+	{% if section.type not in ['single'] and section.handle not in ['landingPages', 'pages'] %}
+    	{% for sectionSettings in section.siteSettings %}
+			{% if sectionSettings.hasUrls %}
+			    {% set options  = options|merge([{label:section.name,value: section.handle}]) %}
+		    {% endif %}
+	    {% endfor %}
+    {% endif %}
 {% endfor %}
 
 {{ forms.select({
